--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "clap"
 version = "3.0.0-beta.5"
-edition = "2018"
+edition = "2021"
+rust-version = "1.54"
 authors = [
 	"Kevin K. <kbknapp@gmail.com>",
 	"Clap Maintainers"
