fix(fig): Reduce deepdencies
Like with #2903, we are depending on more features than needed, forcing
them onto users.  This also impacts our testing since we aren't truly
getting minimal test runs (see #2976).

--- a/clap_generate_fig/Cargo.toml
+++ b/clap_generate_fig/Cargo.toml
@@ -31,7 +31,7 @@ readme = "README.md"
 bench = false
 
 [dependencies]
-clap = { path = "../", version = "=3.0.0-beta.5" }
+clap = { path = "../", version = "=3.0.0-beta.5", default-features = false, features = ["std"] }
 clap_generate = { path = "../clap_generate", version = "=3.0.0-beta.5" }
 
 [dev-dependencies]
