test: Easier to test with minimal features
PR #2979 reduced what dependencies we push on users and made us one step
closer to being able to test more with fewer features.  Looks like I
also need to update `clap_derive`.  I verified locally that #2976 fails
with this.

`clap_derive` still needs `env` because of examples / tests that use it.
I feel like moving `clap_derive`s tests out to `clap` would be the way
to fix this.

--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -39,7 +39,7 @@ heck = "0.3.0"
 proc-macro-error = "1"
 
 [dev-dependencies]
-clap = { path = "../" }
+clap = { path = "../", default-features = false, features = ["std", "derive", "env"] }
 trybuild = "1.0"
 rustversion = "1"
 version-sync = "0.9"
