--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,6 +125,8 @@ regex = "1.0"
 lazy_static = "1"
 version-sync = "0.9"
 criterion = "0.3.2"
+# Cutting out `filesystem` feature
+trycmd = { version = "0.8.0", default-features = false, features = ["color-auto", "diff", "examples"] }
 
 [[example]]
 name = "busybox"
