chore(ci): Update for branch renames
And for not running bors

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -1,7 +1,7 @@
 name: CI-PR
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
 concurrency:
   group: ci-pr-${{ github.ref }}
   cancel-in-progress: true
