--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -1,7 +1,7 @@
 name: Site
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths:
       - site/**
       - .github/workflows/site.yml
