--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Ask a question
-    about: You've come to seek help or want to discuss something related to clap
+    about: For support or brainstorming
     url: https://github.com/clap-rs/clap/discussions/new
-    # TODO: Question template (waiting for discussions template feature)
