--- a/tests/fixtures/app.yaml
+++ b/tests/fixtures/app.yaml
@@ -8,18 +8,18 @@ args:
     - help:
         short: h
         long: help
-        about: prints help with a nonstandard description
+        help: prints help with a nonstandard description
     - option:
         short: o
         long: option
         takes_value: true
         multiple_values: true
-        about: tests options
+        help: tests options
     - positional:
-        about: tests positionals
+        help: tests positionals
         index: 1
     - positional2:
-        about: tests positionals with exclusions
+        help: tests positionals with exclusions
         index: 2
         default_value_if:
             - [flag, null, some]
@@ -29,18 +29,18 @@ args:
         long: flag
         takes_value: true
         multiple_values: true
-        about: tests flags
+        help: tests flags
         global: true
     - flag2:
         short: F
-        about: tests flags with exclusions
+        help: tests flags with exclusions
         conflicts_with:
             - flag
         requires:
             - option2
     - option2:
         long: long-option-2
-        about: tests long options with exclusions
+        help: tests long options with exclusions
         conflicts_with:
             - option
         requires:
@@ -48,7 +48,7 @@ args:
     - option3:
         short: O
         long: option3
-        about: tests options with specific value sets
+        help: tests options with specific value sets
         takes_value: true
         possible_values:
             - fast
@@ -57,22 +57,22 @@ args:
             - [fast, flag]
     - positional3:
         index: 3
-        about: tests positionals with specific values
+        help: tests positionals with specific values
         possible_values: [ vi, emacs ]
     - multvals:
         long: multvals
-        about: Tests multiple values, not mult occs
+        help: Tests multiple values, not mult occs
         value_names:
             - one
             - two
     - multvalsmo:
         long: multvalsmo
         multiple_values: true
-        about: Tests multiple values, not mult occs
+        help: Tests multiple values, not mult occs
         value_names: [one, two]
     - multvalsdelim:
         long: multvalsdelim
-        about: Tests multiple values with required delimiter
+        help: Tests multiple values with required delimiter
         takes_value: true
         multiple_occurrences: true
         use_delimiter: true
@@ -83,60 +83,60 @@ args:
         multiple_values: true
     - singlealias:
         long: singlealias
-        about: Tests single alias
+        help: Tests single alias
         aliases: [alias]
         required_if_eq:
             - [multvalsmo, two]
     - multaliases:
         long: multaliases
-        about: Tests multiple aliases
+        help: Tests multiple aliases
         aliases: [als1, als2, als3]
     - singleshortalias:
         long: singleshortalias
-        about: Tests single short alias
+        help: Tests single short alias
         short_aliases: [a]
         required_if_eq:
             - [multvalsmo, two]
     - multshortaliases:
         long: multshortaliases
-        about: Tests multiple short aliases
+        help: Tests multiple short aliases
         short_aliases: [b, c]
     - minvals2:
         long: minvals2
         multiple_values: true
-        about: Tests 2 min vals
+        help: Tests 2 min vals
         min_values: 2
     - maxvals3:
         long: maxvals3
         multiple_values: true
-        about: Tests 3 max vals
+        help: Tests 3 max vals
         max_values: 3
     - exclusive:
         long: exclusive
-        about: Tests 3 exclusive
+        help: Tests 3 exclusive
         exclusive: true
     - case_insensitive:
         index: 4
-        about: Test case_insensitive
+        help: Test case_insensitive
         possible_values: [test123, test321]
         case_insensitive: true
     - value_hint:
         long: value-hint
-        about: Test value_hint
+        help: Test value_hint
         value_hint: FilePath
     - verbose:
         short: v
         multiple_occurrences: true
         takes_value: false
-        about: Sets the level of verbosity
+        help: Sets the level of verbosity
     - visiblealiases:
         long: visiblealiases
-        about: Tests visible aliases
+        help: Tests visible aliases
         visible_alias: visals1
         visible_aliases: [visals2, visals2, visals3]
     - visibleshortaliases:
         long: visibleshortaliases
-        about: Tests visible short aliases
+        help: Tests visible short aliases
         visible_short_alias: e
         visible_short_aliases: [l, m]
 groups:
@@ -158,8 +158,8 @@ subcommands:
                 short: o
                 long: option
                 multiple_values: true
-                about: tests options
+                help: tests options
                 takes_value: true
             - scpositional:
-                about: tests positionals
+                help: tests positionals
                 index: 1
