docs: Include more features in rustdoc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ default = [
 	"suggestions",
 ]
 debug = ["clap_derive/debug", "backtrace"] # Enables debug messages
-doc = ["yaml", "regex", "unstable-replace", "unstable-multicall", "unstable-grouped"] # for docs.rs
+doc = ["derive", "cargo", "wrap_help", "yaml", "regex", "env", "unstable-replace", "unstable-multicall", "unstable-grouped"] # for docs.rs
 
 # Used in default
 std = ["indexmap/std"] # support for no_std in a backwards-compatible way
