--- a/tests/app.yml
+++ b/tests/app.yml
@@ -4,31 +4,26 @@ about: tests clap library
 author: Kevin K. <kbknapp@gmail.com>
 settings:
     - ArgRequiredElseHelp
+help_message: prints help with a nonstandard description
 args:
-    - help:
-        short: h
-        long: help
-        help: prints help with a nonstandard description
-    - option:
+    - opt:
         short: o
         long: option
+        multiple: true
         takes_value: true
-        multiple_values: true
         help: tests options
     - positional:
         help: tests positionals
-        index: 1
     - positional2:
         help: tests positionals with exclusions
-        index: 2
         default_value_if:
-            - [flag, null, some]
-            - [positional, other, something]
+            - [flag, Null, some]
+            - [postional, other, something]
     - flag:
         short: f
         long: flag
+        multiple: true
         takes_value: true
-        multiple_values: true
         help: tests flags
         global: true
     - flag2:
@@ -41,13 +36,11 @@ args:
     - option2:
         long: long-option-2
         help: tests long options with exclusions
-        conflicts_with:
-            - option
         requires:
             - positional2
     - option3:
         short: O
-        long: option3
+        long: Option
         help: tests options with specific value sets
         takes_value: true
         possible_values:
@@ -56,7 +49,6 @@ args:
         requires_if:
             - [fast, flag]
     - positional3:
-        index: 3
         help: tests positionals with specific values
         possible_values: [ vi, emacs ]
     - multvals:
@@ -67,83 +59,49 @@ args:
             - two
     - multvalsmo:
         long: multvalsmo
-        multiple_values: true
+        multiple: true
+        takes_value: true
         help: Tests multiple values, not mult occs
         value_names: [one, two]
     - multvalsdelim:
         long: multvalsdelim
         help: Tests multiple values with required delimiter
+        multiple: true
         takes_value: true
-        multiple_occurrences: true
-        use_delimiter: true
         require_delimiter: true
-    - settings:
-        short: s
-        takes_value: true
-        multiple_values: true
+        value_delimiter: ","
     - singlealias:
         long: singlealias
         help: Tests single alias
         aliases: [alias]
-        required_if_eq:
+        required_if:
             - [multvalsmo, two]
     - multaliases:
         long: multaliases
         help: Tests multiple aliases
         aliases: [als1, als2, als3]
-    - singleshortalias:
-        long: singleshortalias
-        help: Tests single short alias
-        short_aliases: [a]
-        required_if_eq:
-            - [multvalsmo, two]
-    - multshortaliases:
-        long: multshortaliases
-        help: Tests multiple short aliases
-        short_aliases: [b, c]
     - minvals2:
         long: minvals2
-        multiple_values: true
+        multiple: true
+        takes_value: true
         help: Tests 2 min vals
         min_values: 2
     - maxvals3:
         long: maxvals3
-        multiple_values: true
+        multiple: true
+        takes_value: true
         help: Tests 3 max vals
         max_values: 3
-    - exclusive:
-        long: exclusive
-        help: Tests 3 exclusive
-        exclusive: true
-    - ignore_case:
-        index: 4
-        help: Test ignore case
+    - case_insensitive:
+        help: Test case_insensitive
         possible_values: [test123, test321]
-        ignore_case: true
-    - value_hint:
-        long: value-hint
-        help: Test value_hint
-        value_hint: FilePath
-    - verbose:
-        short: v
-        multiple_occurrences: true
-        takes_value: false
-        help: Sets the level of verbosity
-    - visiblealiases:
-        long: visiblealiases
-        help: Tests visible aliases
-        visible_alias: visals1
-        visible_aliases: [visals2, visals2, visals3]
-    - visibleshortaliases:
-        long: visibleshortaliases
-        help: Tests visible short aliases
-        visible_short_alias: e
-        visible_short_aliases: [l, m]
-groups:
+        case_insensitive: true
+
+arg_groups:
     - test:
         args:
             - maxvals3
-            - minvals2
+            - minmals2
         conflicts_with:
             - option3
         requires:
@@ -157,9 +115,8 @@ subcommands:
             - scoption:
                 short: o
                 long: option
-                multiple_values: true
+                multiple: true
                 help: tests options
                 takes_value: true
             - scpositional:
                 help: tests positionals
-                index: 1
