--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "clap_derive"
-version = "3.0.0-beta.5"
+version = "3.0.0-rc.0"
 edition = "2018"
 authors = [
 	"Guillaume Pinot <texitoi@texitoi.eu>",
