chore: Make makefile easier to use

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,8 @@ jobs:
       run: make build-${{matrix.features}}
     - name: Test
       run: make test-${{matrix.features}}
+    - name: Test (benches)
+      run: make test-${{matrix.features}} ARGS='--workspace --benches'
   check:
     name: Check
     runs-on: ubuntu-latest
