--- a/.github/workflows/rust-next.yml
+++ b/.github/workflows/rust-next.yml
@@ -55,6 +55,9 @@ jobs:
       run: make test-${{matrix.features}}
     - name: Test (benches)
       run: make test-${{matrix.features}} ARGS='--workspace --benches'
+    - name: Test (ultra-minimal)
+      if: matrix.build == 'minimal'
+      run: make test-minimal ARGS='--manifest-path Cargo.toml'
   rustfmt:
     name: rustfmt
     strategy:
