--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,8 +1,9 @@
 name: Feature request
 description: Suggest an idea for this project
 labels:
-  - 'C-enchancement'
-  - 'C-waiting-on-design'
+   - 'T: new feature'
+#  - 'C-enhancement'
+#  - 'S-triage'
 body:
   - type: checkboxes
     attributes:
