docs: Add key-value derive example
This is carried over from the clap_derive examples.  Looking over the
other examples, I feel like they are covered by other examples or by the
derive reference.  We should call out deny missing docs though.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -137,6 +137,10 @@ name = "git_derive"
 required-features = ["derive"]
 
 [[example]]
+name = "keyvalue_derive"
+required-features = ["derive"]
+
+[[example]]
 name = "busybox"
 path = "examples/multicall_busybox.rs"
 required-features = ["unstable-multicall"]
