--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,7 +175,9 @@ jobs:
         override: true
         components: clippy
     - uses: Swatinem/rust-cache@v1
-    - uses: actions-rs/clippy-check@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        args: --workspace --all-features --all-targets -- -D warnings
+    - name: Lint (ultra-minimal)
+      run: make clippy-minimal ARGS='--manifest-path Cargo.toml'
+    - name: Lint (minimal)
+      run: make clippy-minimal
+    - name: Lint (all)
+      run: make clippy-all
