--- a/clap_generate_fig/Cargo.toml
+++ b/clap_generate_fig/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "clap_generate_fig"
-version = "3.0.0-beta.5"
+version = "3.0.0-rc.0"
 edition = "2018"
 include = [
 	"src/**/*",
@@ -27,8 +27,8 @@ readme = "README.md"
 bench = false
 
 [dependencies]
-clap = { path = "../", version = "=3.0.0-beta.5", default-features = false, features = ["std"] }
-clap_generate = { path = "../clap_generate", version = "=3.0.0-beta.5" }
+clap = { path = "../", version = "=3.0.0-rc.0", default-features = false, features = ["std"] }
+clap_generate = { path = "../clap_generate", version = "=3.0.0-rc.0"}
 
 [dev-dependencies]
 pretty_assertions = "1.0"
