--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
 
 [package]
 name = "clap"
-version = "3.0.0-beta.5"
+version = "3.0.0-rc.0"
 description = "A simple to use, efficient, and full-featured Command Line Argument Parser"
 repository = "https://github.com/clap-rs/clap"
 documentation = "https://docs.rs/clap/"
@@ -107,7 +107,7 @@ name = "06_rustup"
 path = "benches/06_rustup.rs"
 
 [dependencies]
-clap_derive = { path = "./clap_derive", version = "=3.0.0-beta.5", optional = true }
+clap_derive = { path = "./clap_derive", version = "=3.0.0-rc.0", optional = true }
 bitflags = "1.2"
 textwrap = { version = "0.14.0", default-features = false, features = [] }
 unicase = { version = "2.6", optional = true }
