chore(gh): Update labels

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,8 +1,7 @@
 name: Bug report
 description: Things not quite working right
 labels:
-   - 'T: bug'
-#  - 'C-bug'
+  - 'C-bug'
 #  - 'S-triage'
 body:
   - type: checkboxes
