--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,25 +1,27 @@
 name: Bug report
-description: Things not quite working right
-labels:
-  - 'C-bug'
-#  - 'S-triage'
+description: An issue with clap, clap_derive or clap_generate
+labels: 'C-bug'
 body:
   - type: checkboxes
     attributes:
+      label: Please complete the following tasks
       options:
         - label: I have searched the [discussions](https://github.com/clap-rs/clap/discussions)
           required: true
         - label: I have searched the existing issues
           required: true
-  - type: textarea
+  - type: input
     attributes:
-      label: Description
+      label: Rust Version
+      description: Output of `rustc -V`
     validations:
       required: true
   - type: input
     attributes:
-      label: Version
+      label: Clap Version
       description: Can be found in Cargo.lock or Cargo.toml of your project (i.e. `grep clap Cargo.lock`). PLEASE DO NOT PUT "latest" HERE, use precise version. Put `master` (or other branch) if you're using the repo directly.
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: Minimal reproducible code
@@ -32,12 +34,26 @@ body:
       required: true
   - type: textarea
     attributes:
+      label: Steps to reproduce the bug with the above code
+      description: A command like `cargo run -- options...` or multiple commands.
+    validations:
+      required: true
+  - type: textarea
+    attributes:
       label: Actual Behaviour
       description: When I do like *this*, *that* is happening and I think it shouldn't.
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: Expected Behaviour
       description: I think *this* should happen instead.
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: Additional Context
+      description: Add any other context about the problem here.
   - type: textarea
     attributes:
       label: Debug Output
