--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,11 +1,10 @@
 name: Feature request
 description: Suggest an idea for this project
-labels:
-  - 'C-enhancement'
-#  - 'S-triage'
+labels: 'C-enhancement'
 body:
   - type: checkboxes
     attributes:
+      label: Please complete the following tasks
       options:
         - label: I have searched the [discussions](https://github.com/clap-rs/clap/discussions)
           required: true
@@ -13,17 +12,27 @@ body:
           required: true
   - type: input
     attributes:
-      label: Version
+      label: Clap Version
       description: Can be found in Cargo.lock or Cargo.toml of your project (i.e. `grep clap Cargo.lock`). PLEASE DO NOT PUT "latest" HERE, use precise version. Put `master` (or other branch) if you're using the repo directly.
+    validations:
+      required: true
   - type: textarea
     attributes:
-      label: Use Case
-      description: Describe the problem you're trying to solve.
+      label: Describe your use case
+      description: Describe the problem you're trying to solve. This is not mandatory and we *do* consider features without a specific use case, but real problems have priority.
+    validations:
+      required: true
   - type: textarea
     attributes:
-      label: Requirements
-      description: Describe what is needed to satisfy your use case.
+      label: Describe the solution you'd like
+      description: Please explain what the wanted solution should look like. You are **strongly encouraged** to attach a snippet of (pseudo)code.
+    validations:
+      required: true
   - type: textarea
     attributes:
-      label: Possible Solutions
-      description: A clear and concise description of any solutions or features you've managed to come up with.
+      label: Alternatives, if applicable
+      description: A clear and concise description of any alternative solutions or features you've managed to come up with.
+  - type: textarea
+    attributes:
+      label: Additional Context
+      description: Add any other context about the feature request here.
