fix: Expose all features in playground
Looks like this is undocumented, see https://github.com/integer32llc/rust-playground/issues/192

Fixes #3065

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ include = [
 [package.metadata.docs.rs]
 features = ["doc"]
 
+[package.metadata.playground]
+features = ["doc"]
+
 [package.metadata.release]
 shared-version = true
 pre-release-replacements = [
