docs: Include examples on docs.rs
See https://twitter.com/wcrichton/status/1456112165744615426 or TWIR
415.

I'm mixed about the risk of using an unstable feature for our docs
though this seems like it'd be a big help.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ include = [
 
 [package.metadata.docs.rs]
 features = ["doc"]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
 
 [package.metadata.release]
 shared-version = true
