chore(ci): Stop using all features
We might enable some nightly-only features

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,4 +180,4 @@ jobs:
     - name: Lint (minimal)
       run: make clippy-minimal
     - name: Lint (all)
-      run: make clippy-all
+      run: make clippy-full
