--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ include = [
 
 [package.metadata.docs.rs]
 features = ["unstable-doc"]
+rustc-args = ["--cfg", "docsrs"]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
 
 [package.metadata.playground]
