--- a/clap_man/Cargo.toml
+++ b/clap_man/Cargo.toml
@@ -8,9 +8,9 @@ include = [
 	"LICENSE-*",
 	"README.md"
 ]
-description = "A generator library used with clap for manpages"
-repository = "https://github.com/clap-rs/clap/tree/master/clap_generate"
-documentation = "https://docs.rs/clap_generate"
+description = "A manpage generator for clap"
+repository = "https://github.com/clap-rs/clap/tree/master/clap_man"
+documentation = "https://docs.rs/clap_man"
 keywords = [
 	"clap",
 	"cli",
@@ -25,11 +25,11 @@ readme = "README.md"
 bench = false
 
 [dependencies]
-clap = { path = "../", version = "=3.0.0-rc.4", default-features = false, features = ["std"] }
+clap = { path = "../", version = "=3.0.0-rc.4", default-features = false, features = ["std", "env"] }
 
 [dev-dependencies]
 pretty_assertions = "1.0"
-clap = { path = "../", version = "=3.0.0-rc.4", default-features = false, features = ["std", "derive"] }
+clap = { path = "../", version = "=3.0.0-rc.4", default-features = false, features = ["std"] }
 
 [features]
 default = []
